# ed65

./: .gitignore  CMakeLists.txt  Makefile  highlight_test.txt  test1.txt
src/: bar.cpp  bar.hpp  command.cpp  command.hpp  common.cpp  common.hpp  highlight.cpp  highlight.hpp  main.cpp  main.hpp  text.cpp  text.hpp
